# Generative-AI-MCP-Application

./: .gitignore  README.md  SECURITY.md  docker-compose.yml
chat-app/: README.md  webpack.config.js
chat-app/public/: index.html
chat-app/src/: App.js
chat-app/src/components/: ChatbotUI.js
mcp-client/: Dockerfile  README.md  pyproject.toml
mcp-client/src/mcp_client/: __init__.py  app.py  client.py  model.py
mcp-server/: Dockerfile  README.md  pyproject.toml
mcp-server/src/mcp_server/: __init__.py  __main__.py  server.py
ollama/: README.md
