[project]
name = "mcp-client"
version = "0.6.2"
description = "A Model Context Protocol server providing tools for LLMs to perform arithmetic operations."
requires-python = ">=3.12"
authors = [
    { name = "Vivek Yadav", email = "v.cse59@gmail.com" },
]
keywords = ["mcp", "llm", "client", "arithmetic"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "fastmcp>=2.5.1",
    "pydantic (>=2.11.5,<3.0.0)",
    "mcp (>=1.9.2,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[project.scripts]
mcp-client = "mcp_client.__init__:main"

[tool.poetry.scripts]
start = "uvicorn:src.mcp_client:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry.dependencies]
python = "^3.12"